--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "contentful": "^8.1.6",
     "core-js": "^3.6.5",
     "hooper": "^0.3.4",
+    "moment": "^2.29.1",
     "nuxt": "^2.14.6",
     "nuxt-fontawesome": "^0.4.0",
     "vue-infinite-loading": "^2.4.5",
