--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "vue-magic-grid": "0.0.4"
   },
   "devDependencies": {
-    "@nuxtjs/tailwindcss": "^3.1.0"
+    "@nuxtjs/tailwindcss": "^3.1.0",
+    "vee-validate": "^3.4.5"
   }
 }
