--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "vue-magic-grid": "0.0.4"
   },
   "devDependencies": {
+    "@nuxtjs/style-resources": "^1.0.0",
     "@nuxtjs/tailwindcss": "^3.1.0",
+    "node-sass": "^5.0.0",
+    "sass-loader": "^10.1.0",
     "vee-validate": "^3.4.5"
   }
 }
